--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,15 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  background: linear-gradient(180deg, rgba(9, 32, 175, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  color: #fff;
+  padding: 5vh 5vw;
 }
