--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,21 @@ body {
   color: #fff;
   padding: 5vh 5vw;
 }
+
+button {
+  background: #1646a0;
+  color: #fff;
+  padding: 0 45px;
+  border: 2px solid white;
+  border-radius: 25px;
+  height: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.2em;
+  cursor: pointer;
+  transition: .4s;
+}
+
+button:hover {
+  background: #0923af;
+}
