feat(project): improved game over and game screens

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,16 @@
   align-items: center;
   text-align: center;
 }
+
+
+/* General application styles */
+.screen h1 {
+  font-size: 3.5em;
+  margin-bottom: 2em;
+}
+
+.screen p {
+  margin-bottom: 2em;
+  color: #ecfa00;
+  font-weight: 600;
+}
